# FFmpegDemo

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/ffmpegdemo/: MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
